test_outputs/connlist/acs-security-demos_explain_output.txt

##########################################
# Specific connections and their reasons #
##########################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => backend/catalog[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Ingress (captured but not selected by any Ingress rule)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => backend/checkout[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Ingress (captured but not selected by any Ingress rule)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => backend/notification[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/notification-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => backend/recommendation[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => backend/reports[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/reports-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => backend/shipping[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/shipping-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => frontend/asset-cache[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Ingress (captured but not selected by any Ingress rule)
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => frontend/webapp[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => payments/gateway[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/gateway-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => payments/mastercard-processor[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => payments/visa-processor[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/catalog[Deployment] => 0.0.0.0-255.255.255.255:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/catalog[Deployment] => backend/checkout[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Ingress (captured but not selected by any Ingress rule)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/catalog[Deployment] => backend/notification[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/notification-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/catalog[Deployment] => backend/recommendation[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/catalog[Deployment] => backend/reports[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/reports-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/catalog[Deployment] => backend/shipping[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/shipping-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/catalog[Deployment] => frontend/asset-cache[Deployment]:

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Ingress rule #1 (protocols/ports not referenced)
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)


	DENIED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (ALLOWED)
			[NP] frontend/asset-cache-netpol // Ingress rule #1

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/catalog[Deployment] => frontend/webapp[Deployment]:

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Ingress rule #1 (protocols/ports not referenced)


	DENIED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (ALLOWED)
			[NP] frontend/webapp-netpol // Ingress rule #1

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/catalog[Deployment] => payments/gateway[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/gateway-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/catalog[Deployment] => payments/mastercard-processor[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/catalog[Deployment] => payments/visa-processor[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/checkout[Deployment] => 0.0.0.0-255.255.255.255:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Egress (captured but not selected by any Egress rule)
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/checkout[Deployment] => backend/catalog[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Egress rule #4 (protocols/ports not referenced)
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Ingress (captured but not selected by any Ingress rule)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/checkout-netpol // Egress rule #4
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Ingress (captured but not selected by any Ingress rule)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/checkout[Deployment] => backend/notification[Deployment]:

ALLOWED LIST:
	ALLOWED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/checkout-netpol // Egress rule #1
		INGRESS DIRECTION (ALLOWED)
			[NP] backend/notification-netpol // Ingress rule #1

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Egress rule #1 (protocols/ports not referenced)
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/notification-netpol // Ingress rule #1 (protocols/ports not referenced)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/checkout-netpol // Egress rule #4
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/notification-netpol // Ingress rule #1 (protocols/ports not referenced)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/checkout[Deployment] => backend/recommendation[Deployment]:

ALLOWED LIST:
	ALLOWED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/checkout-netpol // Egress rule #2
		INGRESS DIRECTION (ALLOWED)
			[NP] backend/recommendation-netpol // Ingress rule #1

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Egress rule #2 (protocols/ports not referenced)
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Ingress rule #1 (protocols/ports not referenced)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/checkout-netpol // Egress rule #4
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Ingress rule #1 (protocols/ports not referenced)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/checkout[Deployment] => backend/reports[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Egress rule #4 (protocols/ports not referenced)
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/reports-netpol // Ingress (captured but not selected by any Ingress rule)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/checkout-netpol // Egress rule #4
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/reports-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/checkout[Deployment] => backend/shipping[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Egress rule #4 (protocols/ports not referenced)
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/shipping-netpol // Ingress (captured but not selected by any Ingress rule)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/checkout-netpol // Egress rule #4
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/shipping-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/checkout[Deployment] => frontend/asset-cache[Deployment]:

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Egress rule #4 (protocols/ports not referenced)
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Ingress rule #1 (protocols/ports not referenced)
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)


	DENIED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Egress rule #4 (protocols/ports not referenced)
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (ALLOWED)
			[NP] frontend/asset-cache-netpol // Ingress rule #1

	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/checkout-netpol // Egress rule #4
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Ingress rule #1 (protocols/ports not referenced)
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/checkout[Deployment] => frontend/webapp[Deployment]:

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Egress rule #4 (protocols/ports not referenced)
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Ingress rule #1 (protocols/ports not referenced)


	DENIED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Egress rule #4 (protocols/ports not referenced)
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (ALLOWED)
			[NP] frontend/webapp-netpol // Ingress rule #1

	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/checkout-netpol // Egress rule #4
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Ingress rule #1 (protocols/ports not referenced)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/checkout[Deployment] => payments/gateway[Deployment]:

ALLOWED LIST:
	ALLOWED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/checkout-netpol // Egress rule #3
		INGRESS DIRECTION (ALLOWED)
			[NP] payments/gateway-netpol // Ingress rule #1

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Egress rule #3 (protocols/ports not referenced)
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/gateway-netpol // Ingress rule #1 (protocols/ports not referenced)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/checkout-netpol // Egress rule #4
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/gateway-netpol // Ingress rule #1 (protocols/ports not referenced)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/checkout[Deployment] => payments/mastercard-processor[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Egress rule #4 (protocols/ports not referenced)
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Ingress (captured but not selected by any Ingress rule)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/checkout-netpol // Egress rule #4
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/checkout[Deployment] => payments/visa-processor[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Egress rule #4 (protocols/ports not referenced)
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Ingress (captured but not selected by any Ingress rule)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/checkout-netpol // Egress rule #4
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/notification[Deployment] => 0.0.0.0-255.255.255.255:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/notification-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/notification[Deployment] => backend/catalog[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/notification-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Ingress (captured but not selected by any Ingress rule)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/notification[Deployment] => backend/checkout[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/notification-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Ingress (captured but not selected by any Ingress rule)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/notification[Deployment] => backend/recommendation[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/notification-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/notification[Deployment] => backend/reports[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/notification-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/reports-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/notification[Deployment] => backend/shipping[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/notification-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/shipping-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/notification[Deployment] => frontend/asset-cache[Deployment]:

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/notification-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Ingress rule #1 (protocols/ports not referenced)
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)


	DENIED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/notification-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (ALLOWED)
			[NP] frontend/asset-cache-netpol // Ingress rule #1

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/notification[Deployment] => frontend/webapp[Deployment]:

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/notification-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Ingress rule #1 (protocols/ports not referenced)


	DENIED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/notification-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (ALLOWED)
			[NP] frontend/webapp-netpol // Ingress rule #1

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/notification[Deployment] => payments/gateway[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/notification-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/gateway-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/notification[Deployment] => payments/mastercard-processor[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/notification-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/notification[Deployment] => payments/visa-processor[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/notification-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/recommendation[Deployment] => 0.0.0.0-255.255.255.255:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Egress (captured but not selected by any Egress rule)

		INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/recommendation[Deployment] => backend/catalog[Deployment]:

ALLOWED LIST:
	ALLOWED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/recommendation-netpol // Egress rule #1
		INGRESS DIRECTION (ALLOWED)
			[NP] backend/catalog-netpol // Ingress rule #1

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Egress rule #1 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Ingress rule #1 (protocols/ports not referenced)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/recommendation-netpol // Egress rule #2
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Ingress rule #1 (protocols/ports not referenced)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/recommendation[Deployment] => backend/checkout[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Egress rule #2 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Ingress (captured but not selected by any Ingress rule)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/recommendation-netpol // Egress rule #2
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Ingress (captured but not selected by any Ingress rule)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/recommendation[Deployment] => backend/notification[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Egress rule #2 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/notification-netpol // Ingress (captured but not selected by any Ingress rule)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/recommendation-netpol // Egress rule #2
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/notification-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/recommendation[Deployment] => backend/reports[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Egress rule #2 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/reports-netpol // Ingress (captured but not selected by any Ingress rule)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/recommendation-netpol // Egress rule #2
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/reports-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/recommendation[Deployment] => backend/shipping[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Egress rule #2 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/shipping-netpol // Ingress (captured but not selected by any Ingress rule)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/recommendation-netpol // Egress rule #2
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/shipping-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/recommendation[Deployment] => frontend/asset-cache[Deployment]:

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Egress rule #2 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Ingress rule #1 (protocols/ports not referenced)
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)


	DENIED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Egress rule #2 (protocols/ports not referenced)

		INGRESS DIRECTION (ALLOWED)
			[NP] frontend/asset-cache-netpol // Ingress rule #1

	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/recommendation-netpol // Egress rule #2
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Ingress rule #1 (protocols/ports not referenced)
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/recommendation[Deployment] => frontend/webapp[Deployment]:

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Egress rule #2 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Ingress rule #1 (protocols/ports not referenced)


	DENIED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Egress rule #2 (protocols/ports not referenced)

		INGRESS DIRECTION (ALLOWED)
			[NP] frontend/webapp-netpol // Ingress rule #1

	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/recommendation-netpol // Egress rule #2
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Ingress rule #1 (protocols/ports not referenced)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/recommendation[Deployment] => payments/gateway[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Egress rule #2 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/gateway-netpol // Ingress (captured but not selected by any Ingress rule)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/recommendation-netpol // Egress rule #2
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/gateway-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/recommendation[Deployment] => payments/mastercard-processor[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Egress rule #2 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Ingress (captured but not selected by any Ingress rule)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/recommendation-netpol // Egress rule #2
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/recommendation[Deployment] => payments/visa-processor[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Egress rule #2 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Ingress (captured but not selected by any Ingress rule)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/recommendation-netpol // Egress rule #2
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/reports[Deployment] => 0.0.0.0-255.255.255.255:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/reports-netpol // Egress (captured but not selected by any Egress rule)

		INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/reports[Deployment] => backend/catalog[Deployment]:

ALLOWED LIST:
	ALLOWED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/reports-netpol // Egress rule #1
		INGRESS DIRECTION (ALLOWED)
			[NP] backend/catalog-netpol // Ingress rule #2

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/reports-netpol // Egress rule #1 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Ingress rule #2 (protocols/ports not referenced)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/reports-netpol // Egress rule #3
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Ingress rule #2 (protocols/ports not referenced)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/reports[Deployment] => backend/checkout[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/reports-netpol // Egress rule #3 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Ingress (captured but not selected by any Ingress rule)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/reports-netpol // Egress rule #3
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Ingress (captured but not selected by any Ingress rule)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/reports[Deployment] => backend/notification[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/reports-netpol // Egress rule #3 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/notification-netpol // Ingress (captured but not selected by any Ingress rule)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/reports-netpol // Egress rule #3
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/notification-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/reports[Deployment] => backend/recommendation[Deployment]:

ALLOWED LIST:
	ALLOWED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/reports-netpol // Egress rule #2
		INGRESS DIRECTION (ALLOWED)
			[NP] backend/recommendation-netpol // Ingress rule #2

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/reports-netpol // Egress rule #2 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Ingress rule #2 (protocols/ports not referenced)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/reports-netpol // Egress rule #3
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Ingress rule #2 (protocols/ports not referenced)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/reports[Deployment] => backend/shipping[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/reports-netpol // Egress rule #3 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/shipping-netpol // Ingress (captured but not selected by any Ingress rule)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/reports-netpol // Egress rule #3
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/shipping-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/reports[Deployment] => frontend/asset-cache[Deployment]:

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/reports-netpol // Egress rule #3 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Ingress rule #1 (protocols/ports not referenced)
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)


	DENIED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/reports-netpol // Egress rule #3 (protocols/ports not referenced)

		INGRESS DIRECTION (ALLOWED)
			[NP] frontend/asset-cache-netpol // Ingress rule #1

	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/reports-netpol // Egress rule #3
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Ingress rule #1 (protocols/ports not referenced)
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/reports[Deployment] => frontend/webapp[Deployment]:

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/reports-netpol // Egress rule #3 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Ingress rule #1 (protocols/ports not referenced)


	DENIED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/reports-netpol // Egress rule #3 (protocols/ports not referenced)

		INGRESS DIRECTION (ALLOWED)
			[NP] frontend/webapp-netpol // Ingress rule #1

	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/reports-netpol // Egress rule #3
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Ingress rule #1 (protocols/ports not referenced)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/reports[Deployment] => payments/gateway[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/reports-netpol // Egress rule #3 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/gateway-netpol // Ingress (captured but not selected by any Ingress rule)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/reports-netpol // Egress rule #3
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/gateway-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/reports[Deployment] => payments/mastercard-processor[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/reports-netpol // Egress rule #3 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Ingress (captured but not selected by any Ingress rule)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/reports-netpol // Egress rule #3
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/reports[Deployment] => payments/visa-processor[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/reports-netpol // Egress rule #3 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Ingress (captured but not selected by any Ingress rule)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] backend/reports-netpol // Egress rule #3
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/shipping[Deployment] => 0.0.0.0-255.255.255.255:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/shipping-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/shipping[Deployment] => backend/catalog[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/shipping-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Ingress (captured but not selected by any Ingress rule)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/shipping[Deployment] => backend/checkout[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/shipping-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Ingress (captured but not selected by any Ingress rule)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/shipping[Deployment] => backend/notification[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/shipping-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/notification-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/shipping[Deployment] => backend/recommendation[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/shipping-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/shipping[Deployment] => backend/reports[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/shipping-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/reports-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/shipping[Deployment] => frontend/asset-cache[Deployment]:

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/shipping-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Ingress rule #1 (protocols/ports not referenced)
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)


	DENIED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/shipping-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (ALLOWED)
			[NP] frontend/asset-cache-netpol // Ingress rule #1

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/shipping[Deployment] => frontend/webapp[Deployment]:

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/shipping-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Ingress rule #1 (protocols/ports not referenced)


	DENIED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/shipping-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (ALLOWED)
			[NP] frontend/webapp-netpol // Ingress rule #1

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/shipping[Deployment] => payments/gateway[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/shipping-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/gateway-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/shipping[Deployment] => payments/mastercard-processor[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/shipping-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN backend/shipping[Deployment] => payments/visa-processor[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] backend/shipping-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN frontend/asset-cache[Deployment] => 0.0.0.0-255.255.255.255:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] frontend/default-deny-in-namespace-frontend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN frontend/asset-cache[Deployment] => backend/catalog[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] frontend/default-deny-in-namespace-frontend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Ingress (captured but not selected by any Ingress rule)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN frontend/asset-cache[Deployment] => backend/checkout[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] frontend/default-deny-in-namespace-frontend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Ingress (captured but not selected by any Ingress rule)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN frontend/asset-cache[Deployment] => backend/notification[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] frontend/default-deny-in-namespace-frontend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/notification-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN frontend/asset-cache[Deployment] => backend/recommendation[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] frontend/default-deny-in-namespace-frontend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN frontend/asset-cache[Deployment] => backend/reports[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] frontend/default-deny-in-namespace-frontend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/reports-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN frontend/asset-cache[Deployment] => backend/shipping[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] frontend/default-deny-in-namespace-frontend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/shipping-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN frontend/asset-cache[Deployment] => frontend/webapp[Deployment]:

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] frontend/default-deny-in-namespace-frontend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Ingress rule #1 (protocols/ports not referenced)


	DENIED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] frontend/default-deny-in-namespace-frontend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (ALLOWED)
			[NP] frontend/webapp-netpol // Ingress rule #1

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN frontend/asset-cache[Deployment] => payments/gateway[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] frontend/default-deny-in-namespace-frontend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/gateway-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN frontend/asset-cache[Deployment] => payments/mastercard-processor[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] frontend/default-deny-in-namespace-frontend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN frontend/asset-cache[Deployment] => payments/visa-processor[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] frontend/default-deny-in-namespace-frontend // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN frontend/webapp[Deployment] => 0.0.0.0-255.255.255.255:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Egress (captured but not selected by any Egress rule)

		INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN frontend/webapp[Deployment] => backend/catalog[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Egress rule #5 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Ingress (captured but not selected by any Ingress rule)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] frontend/webapp-netpol // Egress rule #5
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Ingress (captured but not selected by any Ingress rule)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN frontend/webapp[Deployment] => backend/checkout[Deployment]:

ALLOWED LIST:
	ALLOWED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] frontend/webapp-netpol // Egress rule #1
		INGRESS DIRECTION (ALLOWED)
			[NP] backend/checkout-netpol // Ingress rule #1

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Egress rule #1 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Ingress rule #1 (protocols/ports not referenced)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] frontend/webapp-netpol // Egress rule #5
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Ingress rule #1 (protocols/ports not referenced)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN frontend/webapp[Deployment] => backend/notification[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Egress rule #5 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/notification-netpol // Ingress (captured but not selected by any Ingress rule)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] frontend/webapp-netpol // Egress rule #5
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/notification-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN frontend/webapp[Deployment] => backend/recommendation[Deployment]:

ALLOWED LIST:
	ALLOWED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] frontend/webapp-netpol // Egress rule #2
		INGRESS DIRECTION (ALLOWED)
			[NP] backend/recommendation-netpol // Ingress rule #3

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Egress rule #2 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Ingress rule #3 (protocols/ports not referenced)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] frontend/webapp-netpol // Egress rule #5
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Ingress rule #3 (protocols/ports not referenced)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN frontend/webapp[Deployment] => backend/reports[Deployment]:

ALLOWED LIST:
	ALLOWED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] frontend/webapp-netpol // Egress rule #3
		INGRESS DIRECTION (ALLOWED)
			[NP] backend/reports-netpol // Ingress rule #1

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Egress rule #3 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/reports-netpol // Ingress rule #1 (protocols/ports not referenced)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] frontend/webapp-netpol // Egress rule #5
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/reports-netpol // Ingress rule #1 (protocols/ports not referenced)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN frontend/webapp[Deployment] => backend/shipping[Deployment]:

ALLOWED LIST:
	ALLOWED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] frontend/webapp-netpol // Egress rule #4
		INGRESS DIRECTION (ALLOWED)
			[NP] backend/shipping-netpol // Ingress rule #1

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Egress rule #4 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/shipping-netpol // Ingress rule #1 (protocols/ports not referenced)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] frontend/webapp-netpol // Egress rule #5
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/shipping-netpol // Ingress rule #1 (protocols/ports not referenced)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN frontend/webapp[Deployment] => frontend/asset-cache[Deployment]:

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Egress rule #5 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Ingress rule #1 (protocols/ports not referenced)
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)


	DENIED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Egress rule #5 (protocols/ports not referenced)

		INGRESS DIRECTION (ALLOWED)
			[NP] frontend/asset-cache-netpol // Ingress rule #1

	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] frontend/webapp-netpol // Egress rule #5
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Ingress rule #1 (protocols/ports not referenced)
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN frontend/webapp[Deployment] => payments/gateway[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Egress rule #5 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/gateway-netpol // Ingress (captured but not selected by any Ingress rule)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] frontend/webapp-netpol // Egress rule #5
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/gateway-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN frontend/webapp[Deployment] => payments/mastercard-processor[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Egress rule #5 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Ingress (captured but not selected by any Ingress rule)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] frontend/webapp-netpol // Egress rule #5
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN frontend/webapp[Deployment] => payments/visa-processor[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Egress rule #5 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Ingress (captured but not selected by any Ingress rule)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] frontend/webapp-netpol // Egress rule #5
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/gateway[Deployment] => 0.0.0.0-255.255.255.255:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/gateway-netpol // Egress (captured but not selected by any Egress rule)

		INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/gateway[Deployment] => backend/catalog[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/gateway-netpol // Egress rule #3 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Ingress (captured but not selected by any Ingress rule)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] payments/gateway-netpol // Egress rule #3
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Ingress (captured but not selected by any Ingress rule)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/gateway[Deployment] => backend/checkout[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/gateway-netpol // Egress rule #3 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Ingress (captured but not selected by any Ingress rule)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] payments/gateway-netpol // Egress rule #3
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Ingress (captured but not selected by any Ingress rule)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/gateway[Deployment] => backend/notification[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/gateway-netpol // Egress rule #3 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/notification-netpol // Ingress (captured but not selected by any Ingress rule)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] payments/gateway-netpol // Egress rule #3
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/notification-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/gateway[Deployment] => backend/recommendation[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/gateway-netpol // Egress rule #3 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Ingress (captured but not selected by any Ingress rule)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] payments/gateway-netpol // Egress rule #3
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/gateway[Deployment] => backend/reports[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/gateway-netpol // Egress rule #3 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/reports-netpol // Ingress (captured but not selected by any Ingress rule)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] payments/gateway-netpol // Egress rule #3
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/reports-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/gateway[Deployment] => backend/shipping[Deployment]:

DENIED LIST:
	DENIED TCP, UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/gateway-netpol // Egress rule #3 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/shipping-netpol // Ingress (captured but not selected by any Ingress rule)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] payments/gateway-netpol // Egress rule #3
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/shipping-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/gateway[Deployment] => frontend/asset-cache[Deployment]:

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/gateway-netpol // Egress rule #3 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Ingress rule #1 (protocols/ports not referenced)
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)


	DENIED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/gateway-netpol // Egress rule #3 (protocols/ports not referenced)

		INGRESS DIRECTION (ALLOWED)
			[NP] frontend/asset-cache-netpol // Ingress rule #1

	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] payments/gateway-netpol // Egress rule #3
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Ingress rule #1 (protocols/ports not referenced)
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/gateway[Deployment] => frontend/webapp[Deployment]:

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/gateway-netpol // Egress rule #3 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Ingress rule #1 (protocols/ports not referenced)


	DENIED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/gateway-netpol // Egress rule #3 (protocols/ports not referenced)

		INGRESS DIRECTION (ALLOWED)
			[NP] frontend/webapp-netpol // Ingress rule #1

	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] payments/gateway-netpol // Egress rule #3
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Ingress rule #1 (protocols/ports not referenced)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/gateway[Deployment] => payments/mastercard-processor[Deployment]:

ALLOWED LIST:
	ALLOWED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] payments/gateway-netpol // Egress rule #1
		INGRESS DIRECTION (ALLOWED)
			[NP] payments/mastercard-processor-netpol // Ingress rule #1

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/gateway-netpol // Egress rule #1 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Ingress rule #1 (protocols/ports not referenced)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] payments/gateway-netpol // Egress rule #3
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Ingress rule #1 (protocols/ports not referenced)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/gateway[Deployment] => payments/visa-processor[Deployment]:

ALLOWED LIST:
	ALLOWED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] payments/gateway-netpol // Egress rule #2
		INGRESS DIRECTION (ALLOWED)
			[NP] payments/visa-processor-netpol // Ingress rule #1

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP:[1-5352,5354-65535], SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/gateway-netpol // Egress rule #2 (protocols/ports not referenced)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Ingress rule #1 (protocols/ports not referenced)


	DENIED UDP:[5353] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED)
			[NP] payments/gateway-netpol // Egress rule #3
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Ingress rule #1 (protocols/ports not referenced)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/mastercard-processor[Deployment] => 0.0.0.0-255.255.255.255:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/mastercard-processor[Deployment] => backend/catalog[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Ingress (captured but not selected by any Ingress rule)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/mastercard-processor[Deployment] => backend/checkout[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Ingress (captured but not selected by any Ingress rule)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/mastercard-processor[Deployment] => backend/notification[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/notification-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/mastercard-processor[Deployment] => backend/recommendation[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/mastercard-processor[Deployment] => backend/reports[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/reports-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/mastercard-processor[Deployment] => backend/shipping[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/shipping-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/mastercard-processor[Deployment] => frontend/asset-cache[Deployment]:

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Ingress rule #1 (protocols/ports not referenced)
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)


	DENIED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (ALLOWED)
			[NP] frontend/asset-cache-netpol // Ingress rule #1

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/mastercard-processor[Deployment] => frontend/webapp[Deployment]:

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Ingress rule #1 (protocols/ports not referenced)


	DENIED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (ALLOWED)
			[NP] frontend/webapp-netpol // Ingress rule #1

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/mastercard-processor[Deployment] => payments/gateway[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/gateway-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/mastercard-processor[Deployment] => payments/visa-processor[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/visa-processor[Deployment] => 0.0.0.0-255.255.255.255:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/visa-processor[Deployment] => backend/catalog[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/catalog-netpol // Ingress (captured but not selected by any Ingress rule)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/visa-processor[Deployment] => backend/checkout[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/checkout-netpol // Ingress (captured but not selected by any Ingress rule)
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/visa-processor[Deployment] => backend/notification[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/notification-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/visa-processor[Deployment] => backend/recommendation[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/recommendation-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/visa-processor[Deployment] => backend/reports[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/reports-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/visa-processor[Deployment] => backend/shipping[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] backend/default-deny-in-namespace-backend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] backend/shipping-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/visa-processor[Deployment] => frontend/asset-cache[Deployment]:

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Ingress rule #1 (protocols/ports not referenced)
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)


	DENIED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (ALLOWED)
			[NP] frontend/asset-cache-netpol // Ingress rule #1

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/visa-processor[Deployment] => frontend/webapp[Deployment]:

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Ingress rule #1 (protocols/ports not referenced)


	DENIED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (ALLOWED)
			[NP] frontend/webapp-netpol // Ingress rule #1

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/visa-processor[Deployment] => payments/gateway[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/gateway-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN payments/visa-processor[Deployment] => payments/mastercard-processor[Deployment]:

DENIED LIST:
	DENIED TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Egress (captured but not selected by any Egress rule - no rules defined)
				- [NP] payments/visa-processor-netpol // Egress (captured but not selected by any Egress rule - no rules defined)

		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] payments/default-deny-in-namespace-payments // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] payments/mastercard-processor-netpol // Ingress (captured but not selected by any Ingress rule)


----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN {ingress-controller} => frontend/asset-cache[Deployment]:

ALLOWED LIST:
	ALLOWED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
		INGRESS DIRECTION (ALLOWED)
			[NP] frontend/asset-cache-netpol // Ingress rule #1
			[Route] frontend/asset-cache // service asset-cache-service

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/asset-cache-netpol // Ingress rule #1 (protocols/ports not referenced)
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)

			[Route] frontend/asset-cache // service asset-cache-service (protocols/ports not referenced)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN {ingress-controller} => frontend/webapp[Deployment]:

ALLOWED LIST:
	ALLOWED TCP:[8080] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
		INGRESS DIRECTION (ALLOWED)
			[NP] frontend/webapp-netpol // Ingress rule #1
			[Route] frontend/webapp // service webapp-service

DENIED LIST:
	DENIED TCP:[1-8079,8081-65535], UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
		INGRESS DIRECTION (DENIED)
			NP list:
				- [NP] frontend/default-deny-in-namespace-frontend // Ingress (captured but not selected by any Ingress rule - no rules defined)
				- [NP] frontend/webapp-netpol // Ingress rule #1 (protocols/ports not referenced)

			[Route] frontend/webapp // service webapp-service (protocols/ports not referenced)
